Icon added + Data fully working

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,11 +5,11 @@
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
-        android:label="@string/app_name"
+        android:label="Count IT"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.CounterApp">
-        <activity android:name="com.noelHuibers.counterapp.activities.SettingActivity"></activity>
+        <activity android:name="com.noelHuibers.counterapp.activities.SettingActivity" />
         <activity android:name="com.noelHuibers.counterapp.activities.NumberCountActivity" />
         <activity android:name="com.noelHuibers.counterapp.activities.CountingObjectActivity" />
         <activity
@@ -17,7 +17,6 @@
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
